[gd_scene load_steps=23 format=3 uid="uid://cfmoahalri06d"]

[ext_resource type="Script" path="res://addons/player-networking/NetworkGateway.gd" id="1"]
[ext_resource type="Script" path="res://addons/player-networking/Enetmultiplayerserver.gd" id="3"]
[ext_resource type="Script" path="res://addons/player-networking/PlayerConnections.gd" id="4"]
[ext_resource type="Script" path="res://addons/player-networking/UDPdiscoveryserver.gd" id="5"]
[ext_resource type="Script" path="res://addons/player-networking/UDPdiscoveryclient.gd" id="6"]
[ext_resource type="Script" path="res://addons/player-networking/Enetmultiplayerclient.gd" id="7"]
[ext_resource type="Script" path="res://addons/player-networking/Websocketmultiplayerserver.gd" id="8"]
[ext_resource type="Script" path="res://addons/player-networking/ServermodeWebSocketsignal.gd" id="9"]
[ext_resource type="Script" path="res://addons/player-networking/WebRTCmultiplayerserver.gd" id="10"]
[ext_resource type="Script" path="res://addons/player-networking/ServermodeMQTTsignal.gd" id="11"]
[ext_resource type="Script" path="res://addons/player-networking/Websocketmultiplayerclient.gd" id="12"]
[ext_resource type="Script" path="res://addons/player-networking/ClientmodeWebSocketsignal.gd" id="13"]
[ext_resource type="Script" path="res://addons/player-networking/WebRTCmultiplayerclient.gd" id="14"]
[ext_resource type="PackedScene" uid="uid://ktm7k0co2o7l" path="res://addons/mqtt/mqtt.tscn" id="14_c5n2c"]
[ext_resource type="Script" path="res://addons/player-networking/ClientmodeMQTTsignal.gd" id="15"]
[ext_resource type="Script" path="res://addons/player-networking/RecordingFeature.gd" id="16_hf3ik"]
[ext_resource type="Script" path="res://addons/player-networking/DoppelgangerPanel_ui.gd" id="16_i8v6k"]

[sub_resource type="AudioStreamMicrophone" id="2"]

[sub_resource type="FontVariation" id="FontVariation_pmwxj"]
spacing_top = -5
spacing_bottom = -4

[sub_resource type="FontVariation" id="FontVariation_mwhde"]
spacing_top = -5
spacing_bottom = -4

[sub_resource type="FontVariation" id="FontVariation_1w4f6"]
spacing_top = -5
spacing_bottom = -6

[sub_resource type="FontVariation" id="FontVariation_8pqve"]
spacing_top = -6
spacing_bottom = -3

[node name="NetworkGateway" type="Panel"]
self_modulate = Color(0.32549, 0.317647, 0.317647, 1)
offset_top = -1.0
offset_right = 648.0
offset_bottom = 378.0
script = ExtResource("1")

[node name="ProtocolOptions" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 8.0
offset_right = 287.0
offset_bottom = 39.0
item_count = 4
selected = 3
popup/item_0/text = "ENet"
popup/item_0/id = 0
popup/item_1/text = "WebSocket"
popup/item_1/id = 1
popup/item_2/text = "WebRTC (websocket signal)"
popup/item_2/id = 2
popup/item_3/text = "WebRTC (mqtt signal)"
popup/item_3/id = 3

[node name="Label" type="Label" parent="ProtocolOptions"]
layout_mode = 0
offset_left = -72.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 29.0
text = "Protocol:"

[node name="NetworkOptions" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 10.0
offset_right = 636.0
offset_bottom = 41.0
item_count = 3
selected = 0
popup/item_0/text = "Network off"
popup/item_0/id = 0
popup/item_1/text = "As server"
popup/item_1/id = 1
popup/item_2/text = "Local network"
popup/item_2/id = 2

[node name="NetworkLabel" type="Label" parent="NetworkOptions"]
layout_mode = 0
offset_left = -97.0
offset_right = -4.00003
offset_bottom = 26.0
pivot_offset = Vector2(103.791, -1.38985)
text = "Connection:"

[node name="portnumber" type="LineEdit" parent="NetworkOptions"]
layout_mode = 0
offset_left = 117.0
offset_top = 35.0
offset_right = 184.062
offset_bottom = 66.0
text = "4547"

[node name="Label" type="Label" parent="NetworkOptions/portnumber"]
layout_mode = 0
offset_left = -40.0003
offset_top = 5.04538
offset_right = -0.000320435
offset_bottom = 19.0454
text = "port:"

[node name="NetworkOptionsMQTTWebRTC" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 7.0
offset_right = 631.0
offset_bottom = 38.0
item_count = 4
selected = 0
popup/item_0/text = "Network off"
popup/item_0/id = 0
popup/item_1/text = "As server"
popup/item_1/id = 1
popup/item_2/text = "As client"
popup/item_2/id = 2
popup/item_3/text = "As necessary"
popup/item_3/id = 3

[node name="NetworkLabel" type="Label" parent="NetworkOptionsMQTTWebRTC"]
layout_mode = 0
offset_left = -102.0
offset_top = 5.0
offset_right = -8.99997
offset_bottom = 31.0
pivot_offset = Vector2(103.791, -1.38985)
text = "Connection:"

[node name="UDPipdiscovery" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 48.0
offset_right = 419.0
offset_bottom = 85.0
color = Color(0.270588, 0.235294, 0.0509804, 1)

[node name="Servermode" type="Control" parent="UDPipdiscovery"]
anchors_preset = 0
offset_left = 242.0
offset_top = 3.0
offset_right = 364.0
offset_bottom = 24.0
script = ExtResource("5")

[node name="broadcastperiod" type="LineEdit" parent="UDPipdiscovery/Servermode"]
layout_mode = 0
offset_left = 84.0
offset_top = 1.0
offset_right = 151.062
offset_bottom = 32.0
text = "2.0"

[node name="Label" type="Label" parent="UDPipdiscovery/Servermode/broadcastperiod"]
layout_mode = 0
offset_left = -73.0
offset_top = 3.0
offset_right = -9.0
offset_bottom = 29.0
text = "interval:"

[node name="ColorRect" type="ColorRect" parent="UDPipdiscovery/Servermode"]
layout_mode = 0
offset_left = 146.0
offset_top = 6.0
offset_right = 150.0
offset_bottom = 27.0
color = Color(0.968627, 0.933333, 0.0431373, 1)

[node name="broadcastport" type="LineEdit" parent="UDPipdiscovery"]
layout_mode = 0
offset_left = 85.7593
offset_top = 3.0
offset_right = 143.759
offset_bottom = 27.0
text = "4546"

[node name="Label" type="Label" parent="UDPipdiscovery/broadcastport"]
layout_mode = 0
offset_left = -80.7593
offset_right = -12.7593
offset_bottom = 26.0
text = "udp port"

[node name="Clientmode" type="Control" parent="UDPipdiscovery"]
anchors_preset = 0
offset_left = 275.0
offset_top = 22.0
offset_right = 337.0
offset_bottom = 27.0
script = ExtResource("6")

[node name="udpenabled" type="CheckBox" parent="UDPipdiscovery"]
layout_mode = 0
offset_left = 154.879
offset_top = 3.0
offset_right = 225.879
offset_bottom = 27.0
button_pressed = true
text = "enable"

[node name="ENetMultiplayer" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 94.0
offset_right = 365.0
offset_bottom = 152.0
color = Color(0.0980392, 0.305882, 0.160784, 1)

[node name="Servermode" type="Control" parent="ENetMultiplayer"]
visible = false
anchors_preset = 0
offset_left = 157.0
offset_top = 4.0
offset_right = 339.0
offset_bottom = 49.0
script = ExtResource("3")

[node name="StartENetmultiplayer" type="Button" parent="ENetMultiplayer/Servermode"]
layout_mode = 0
offset_left = 49.0
offset_top = 8.99999
offset_right = 189.0
offset_bottom = 40.0
toggle_mode = true
text = "Start ENet server"

[node name="Clientmode" type="Control" parent="ENetMultiplayer"]
visible = false
anchors_preset = 0
offset_left = 157.0
offset_top = 16.0
offset_right = 346.0
offset_bottom = 62.0
script = ExtResource("7")

[node name="StartENetmultiplayer" type="Button" parent="ENetMultiplayer/Clientmode"]
layout_mode = 0
offset_left = 53.0
offset_top = -7.0
offset_right = 187.0
offset_bottom = 24.0
toggle_mode = true
text = "Start ENet client"

[node name="Label" type="Label" parent="ENetMultiplayer"]
layout_mode = 0
offset_left = 8.74201
offset_top = 4.087
offset_right = 119.742
offset_bottom = 18.087
text = "ENet multiplayer"

[node name="autoconnect" type="CheckBox" parent="ENetMultiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.068
offset_left = 13.0
offset_top = 25.0
offset_right = 138.0
offset_bottom = 52.056
button_pressed = true
text = "autoconnect"

[node name="WebSocketMultiplayer" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 95.0
offset_right = 458.0
offset_bottom = 153.0
color = Color(0.0980392, 0.305882, 0.160784, 1)

[node name="Servermode" type="Control" parent="WebSocketMultiplayer"]
anchors_preset = 0
offset_left = 157.0
offset_top = 4.0
offset_right = 339.0
offset_bottom = 49.0
script = ExtResource("8")

[node name="StartWebSocketmultiplayer" type="Button" parent="WebSocketMultiplayer/Servermode"]
layout_mode = 0
offset_left = 97.0
offset_top = 11.0
offset_right = 285.0
offset_bottom = 42.0
toggle_mode = true
text = "Start WebSocket server"

[node name="Clientmode" type="Control" parent="WebSocketMultiplayer"]
anchors_preset = 0
offset_left = 249.0
offset_top = 7.0
offset_right = 438.0
offset_bottom = 53.0
script = ExtResource("12")

[node name="StartWebSocketmultiplayer" type="Button" parent="WebSocketMultiplayer/Clientmode"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 189.0
offset_bottom = 38.0
toggle_mode = true
text = "Start WebSocket client"

[node name="Label" type="Label" parent="WebSocketMultiplayer"]
layout_mode = 0
offset_left = 8.74201
offset_top = 4.087
offset_right = 119.742
offset_bottom = 18.087
text = "WebSocket multiplayer"

[node name="autoconnect" type="CheckBox" parent="WebSocketMultiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.068
offset_left = 19.0
offset_top = 25.0
offset_right = 144.0
offset_bottom = 52.056
button_pressed = true
text = "autoconnect"

[node name="WebSocketsignalling" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 86.0
offset_right = -6.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.231373, 0.294118, 1)

[node name="Servermode" type="Control" parent="WebSocketsignalling"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 364.0
offset_top = 11.0
offset_bottom = -8.00012
script = ExtResource("9")

[node name="WebRTCmultiplayerserver" type="Control" parent="WebSocketsignalling/Servermode"]
anchors_preset = 0
offset_left = 2.8562
offset_top = 47.5227
offset_right = 229.856
offset_bottom = 129.523
script = ExtResource("10")

[node name="StartWebRTCmultiplayer" type="Button" parent="WebSocketsignalling/Servermode/WebRTCmultiplayerserver"]
layout_mode = 0
offset_left = -7.97717
offset_top = -23.5996
offset_right = 123.023
offset_bottom = -3.59962
toggle_mode = true
text = "StartWebrtc server"

[node name="statuslabel" type="Label" parent="WebSocketsignalling/Servermode/WebRTCmultiplayerserver"]
layout_mode = 0
offset_left = 137.999
offset_top = -19.9523
offset_right = 177.999
offset_bottom = -3.95229
text = "null"

[node name="ClientsList" type="OptionButton" parent="WebSocketsignalling/Servermode"]
layout_mode = 0
offset_left = 2.8562
offset_top = -3.15384
offset_right = 140.856
offset_bottom = 16.8462

[node name="Clientmode" type="Control" parent="WebSocketsignalling"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 379.0
offset_top = 12.0
offset_right = -11.0
offset_bottom = -1.99973
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13")

[node name="WebRTCmultiplayerclient" type="Control" parent="WebSocketsignalling/Clientmode"]
anchors_preset = 0
offset_left = -3.0
offset_top = 9.0
offset_right = 135.0
offset_bottom = 35.0
script = ExtResource("14")

[node name="StartWebRTCmultiplayer" type="Button" parent="WebSocketsignalling/Clientmode/WebRTCmultiplayerclient"]
layout_mode = 0
offset_left = 86.0
offset_top = 9.0
offset_right = 234.0
offset_bottom = 40.0
toggle_mode = true
text = "StartWebrtc client"

[node name="statuslabel" type="Label" parent="WebSocketsignalling/Clientmode/WebRTCmultiplayerclient"]
layout_mode = 0
offset_left = 98.0308
offset_top = -34.9594
offset_right = 166.031
offset_bottom = -20.9594
text = "null"

[node name="VSeparator" type="VSeparator" parent="WebSocketsignalling"]
layout_mode = 0
offset_left = 347.879
offset_top = 5.087
offset_right = 358.879
offset_bottom = 45.087

[node name="client_id" type="LineEdit" parent="WebSocketsignalling"]
layout_mode = 0
offset_left = 178.0
offset_top = 6.0
offset_right = 262.0
offset_bottom = 37.0
editable = false

[node name="Label" type="Label" parent="WebSocketsignalling/client_id"]
layout_mode = 0
offset_left = -165.0
offset_right = -17.0
offset_bottom = 26.0
text = "websocket clientid:"

[node name="autoconnect" type="CheckBox" parent="WebSocketsignalling"]
layout_mode = 0
offset_left = 150.0
offset_top = 38.0
offset_right = 346.0
offset_bottom = 69.0
button_pressed = true
text = "autoconnect"

[node name="MQTTsignalling" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 48.0
offset_right = -14.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.145098, 0.294118, 1)

[node name="Servermode" type="Control" parent="MQTTsignalling"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 364.0
offset_top = 11.0
offset_bottom = -8.00012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11")

[node name="WebRTCmultiplayerserver" type="Control" parent="MQTTsignalling/Servermode"]
anchors_preset = 0
offset_left = 2.8562
offset_top = 47.5227
offset_right = 229.856
offset_bottom = 129.523
script = ExtResource("10")

[node name="StartWebRTCmultiplayer" type="Button" parent="MQTTsignalling/Servermode/WebRTCmultiplayerserver"]
layout_mode = 0
offset_left = 38.1438
offset_top = -0.522704
offset_right = 192.144
offset_bottom = 30.4773
toggle_mode = true
text = "StartWebrtc server"

[node name="statuslabel" type="Label" parent="MQTTsignalling/Servermode/WebRTCmultiplayerserver"]
layout_mode = 0
offset_left = 199.144
offset_top = 7.4773
offset_right = 239.144
offset_bottom = 33.4773
text = "null"

[node name="ClientsList" type="OptionButton" parent="MQTTsignalling/Servermode"]
layout_mode = 0
offset_left = 45.0
offset_top = 24.0
offset_right = 182.999
offset_bottom = 44.0

[node name="Clientmode" type="Control" parent="MQTTsignalling"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.335
offset_top = 10.9231
offset_right = -14.6655
offset_bottom = -14.077
script = ExtResource("15")

[node name="WebRTCmultiplayerclient" type="Control" parent="MQTTsignalling/Clientmode"]
anchors_preset = 0
offset_left = -3.0
offset_top = 9.0
offset_right = 135.0
offset_bottom = 35.0
script = ExtResource("14")

[node name="StartWebRTCmultiplayer" type="Button" parent="MQTTsignalling/Clientmode/WebRTCmultiplayerclient"]
layout_mode = 0
offset_left = 8.4729
offset_top = 15.0
offset_right = 135.473
offset_bottom = 35.0
toggle_mode = true
text = "StartWebrtc client"

[node name="statuslabel" type="Label" parent="MQTTsignalling/Clientmode/WebRTCmultiplayerclient"]
layout_mode = 0
offset_left = 8.4729
offset_top = 38.5227
offset_right = 50.4729
offset_bottom = 59.5227
text = "null"

[node name="brokeraddress" type="LineEdit" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 236.0
offset_bottom = 38.0
tooltip_text = "MQTT broker URL"
text = "test.mosquitto.org"

[node name="roomname" type="LineEdit" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 115.0
offset_top = 35.0
offset_right = 195.0
offset_bottom = 66.0
text = "lettuce"

[node name="Label" type="Label" parent="MQTTsignalling/roomname"]
layout_mode = 0
offset_left = -105.0
offset_top = 5.0
offset_right = -11.0
offset_bottom = 31.0
text = "Roomname:"

[node name="VSeparator" type="VSeparator" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 378.0
offset_top = 26.0
offset_right = 389.0
offset_bottom = 66.0

[node name="mqttautoconnect" type="CheckBox" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 199.0
offset_top = 37.0
offset_right = 366.0
offset_bottom = 68.0
button_pressed = true
text = "mqtt autoconnect"

[node name="client_id" type="LineEdit" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 152.0
offset_top = 72.0
offset_right = 259.0
offset_bottom = 103.0
editable = false

[node name="Label" type="Label" parent="MQTTsignalling/client_id"]
layout_mode = 0
offset_left = -124.0
offset_top = 2.0
offset_right = -20.0
offset_bottom = 28.0
text = "mqtt clientid:"

[node name="autoconnect" type="CheckBox" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 427.0
offset_top = 3.0
offset_right = 552.0
offset_bottom = 34.0
button_pressed = true
text = "autoconnect"

[node name="StartMQTT" type="Button" parent="MQTTsignalling"]
layout_mode = 0
offset_left = 242.0
offset_top = 7.0
offset_right = 330.0
offset_bottom = 38.0
toggle_mode = true
text = "Start mqtt"

[node name="statuslabel" type="Label" parent="MQTTsignalling/StartMQTT"]
layout_mode = 0
offset_left = 100.19
offset_top = 3.10048
offset_right = 151.19
offset_bottom = 29.1005
text = "Off"

[node name="MQTT" parent="MQTTsignalling" instance=ExtResource("14_c5n2c")]
verbose_level = 0

[node name="PlayerConnections" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 163.0
offset_right = 633.0
offset_bottom = 250.0
color = Color(0.0156863, 0.0313726, 0.392157, 1)
script = ExtResource("4")

[node name="HBoxMain" type="HSplitContainer" parent="PlayerConnections"]
layout_mode = 0
offset_right = 613.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerConnections/HBoxMain"]
layout_mode = 2

[node name="HBox_players" type="HBoxContainer" parent="PlayerConnections/HBoxMain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerConnections/HBoxMain/VBoxContainer/HBox_players"]
layout_mode = 2
text = "Players:"

[node name="PlayerList" type="OptionButton" parent="PlayerConnections/HBoxMain/VBoxContainer/HBox_players"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 1
selected = 0
popup/item_0/text = "me"
popup/item_0/id = 0

[node name="RecordingFeature" type="HBoxContainer" parent="PlayerConnections/HBoxMain/VBoxContainer"]
layout_mode = 2
script = ExtResource("16_hf3ik")

[node name="MicRecord" type="Button" parent="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature"]
layout_mode = 2
text = "MicRecord"

[node name="AudioStreamRecorder" type="AudioStreamPlayer" parent="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature/MicRecord"]
stream = SubResource("2")
autoplay = true
bus = &"Recorder"

[node name="RecordSize" type="Label" parent="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature"]
layout_mode = 2
size_flags_horizontal = 6
text = "none"

[node name="SendRecord" type="Button" parent="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature"]
layout_mode = 2
text = "Send"

[node name="PlayRecord" type="Button" parent="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature"]
layout_mode = 2
text = "Play"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature/PlayRecord"]
autoplay = true

[node name="HBoxLag" type="HBoxContainer" parent="PlayerConnections/HBoxMain/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerConnections/HBoxMain/VBoxContainer/HBoxLag"]
layout_mode = 2
text = "Lag latency:"

[node name="PlayerLagSlider" type="HSlider" parent="PlayerConnections/HBoxMain/VBoxContainer/HBoxLag"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
max_value = 5.0
step = 0.0

[node name="ConnectionLog" type="TextEdit" parent="PlayerConnections/HBoxMain"]
layout_mode = 2

[node name="DoppelgangerPanel" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 258.0
offset_right = 648.0
offset_bottom = 324.0
color = Color(0.235294, 0.101961, 0.101961, 1)
script = ExtResource("16_i8v6k")

[node name="hbox" type="HBoxContainer" parent="DoppelgangerPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox_enable" type="VBoxContainer" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="DoppelgangerEnable" type="CheckBox" parent="DoppelgangerPanel/hbox/VBox_enable"]
layout_mode = 2
size_flags_horizontal = 4
text = "Doppelganger"

[node name="VSeparator" type="VSeparator" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBox_offset" type="VBoxContainer" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Label_offset" type="Label" parent="DoppelgangerPanel/hbox/VBox_offset"]
layout_mode = 2
text = "offset:"

[node name="netoffset" type="LineEdit" parent="DoppelgangerPanel/hbox/VBox_offset"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = SubResource("FontVariation_pmwxj")
text = "-4000"

[node name="VSeparator2" type="VSeparator" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 10

[node name="VBox_delaymin" type="VBoxContainer" parent="DoppelgangerPanel/hbox"]
layout_mode = 2

[node name="Label_delaymin" type="Label" parent="DoppelgangerPanel/hbox/VBox_delaymin"]
layout_mode = 2
text = "delay min:"

[node name="netdelaymin" type="LineEdit" parent="DoppelgangerPanel/hbox/VBox_delaymin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = SubResource("FontVariation_mwhde")
text = "70"

[node name="VSeparator3" type="VSeparator" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 10

[node name="VBox_netdelay" type="VBoxContainer" parent="DoppelgangerPanel/hbox"]
layout_mode = 2

[node name="Label_netdelay" type="Label" parent="DoppelgangerPanel/hbox/VBox_netdelay"]
layout_mode = 2
text = "delay add:"

[node name="netdelayadd" type="LineEdit" parent="DoppelgangerPanel/hbox/VBox_netdelay"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_1w4f6")
text = "30"

[node name="VSeparator4" type="VSeparator" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 10

[node name="VBox_netdrop" type="VBoxContainer" parent="DoppelgangerPanel/hbox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label_netdrop" type="Label" parent="DoppelgangerPanel/hbox/VBox_netdrop"]
layout_mode = 2
text = "drop out%:"

[node name="netdroppc" type="LineEdit" parent="DoppelgangerPanel/hbox/VBox_netdrop"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_8pqve")
text = "0.1"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.089
offset_right = -17.672
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Control"]

[connection signal="item_selected" from="ProtocolOptions" to="." method="_on_ProtocolOptions_item_selected"]
[connection signal="item_selected" from="NetworkOptions" to="." method="_on_NetworkOptions_item_selected"]
[connection signal="item_selected" from="NetworkOptionsMQTTWebRTC" to="." method="_on_NetworkOptionsMQTTWebRTC_item_selected"]
[connection signal="toggled" from="UDPipdiscovery/udpenabled" to="." method="_on_udpenabled_toggled"]
[connection signal="toggled" from="ENetMultiplayer/Servermode/StartENetmultiplayer" to="ENetMultiplayer/Servermode" method="_on_StartENetmultiplayer_toggled"]
[connection signal="toggled" from="ENetMultiplayer/Clientmode/StartENetmultiplayer" to="ENetMultiplayer/Clientmode" method="_on_StartENetmultiplayer_toggled"]
[connection signal="toggled" from="WebSocketMultiplayer/Servermode/StartWebSocketmultiplayer" to="WebSocketMultiplayer/Servermode" method="_on_StartWebSocketmultiplayer_toggled"]
[connection signal="toggled" from="WebSocketMultiplayer/Clientmode/StartWebSocketmultiplayer" to="WebSocketMultiplayer/Clientmode" method="_on_StartWebSocketmultiplayer_toggled"]
[connection signal="toggled" from="WebSocketsignalling/Servermode/WebRTCmultiplayerserver/StartWebRTCmultiplayer" to="WebSocketsignalling/Servermode/WebRTCmultiplayerserver" method="_on_StartWebRTCmultiplayer_toggled"]
[connection signal="toggled" from="WebSocketsignalling/Clientmode/WebRTCmultiplayerclient/StartWebRTCmultiplayer" to="WebSocketsignalling/Clientmode/WebRTCmultiplayerclient" method="_on_StartWebRTCmultiplayer_toggled"]
[connection signal="toggled" from="MQTTsignalling/Servermode/WebRTCmultiplayerserver/StartWebRTCmultiplayer" to="MQTTsignalling/Servermode/WebRTCmultiplayerserver" method="_on_StartWebRTCmultiplayer_toggled"]
[connection signal="toggled" from="MQTTsignalling/Clientmode/WebRTCmultiplayerclient/StartWebRTCmultiplayer" to="MQTTsignalling/Clientmode/WebRTCmultiplayerclient" method="_on_StartWebRTCmultiplayer_toggled"]
[connection signal="toggled" from="MQTTsignalling/StartMQTT" to="MQTTsignalling/Servermode" method="_on_StartServer_toggled"]
[connection signal="item_selected" from="PlayerConnections/HBoxMain/VBoxContainer/HBox_players/PlayerList" to="PlayerConnections" method="_on_PlayerList_item_selected"]
[connection signal="button_down" from="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature/MicRecord" to="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature" method="_on_MicRecord_button_down"]
[connection signal="button_up" from="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature/MicRecord" to="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature" method="_on_MicRecord_button_up"]
[connection signal="pressed" from="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature/SendRecord" to="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature" method="_on_SendRecord_pressed"]
[connection signal="pressed" from="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature/PlayRecord" to="PlayerConnections/HBoxMain/VBoxContainer/RecordingFeature" method="_on_PlayRecord_pressed"]
[connection signal="value_changed" from="PlayerConnections/HBoxMain/VBoxContainer/HBoxLag/PlayerLagSlider" to="PlayerConnections" method="_on_PlayerLagSlider_value_changed"]
[connection signal="toggled" from="DoppelgangerPanel/hbox/VBox_enable/DoppelgangerEnable" to="PlayerConnections" method="_on_Doppelganger_toggled"]
